--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
     <body>
         <header>
-            <div id="answer-counter">Correct Answers: <span id="number-correct"></span></div>
+            <div id="header">
+                <div id="answer-counter">Correct Answers: <span id="number-correct"></span></div>
 
-            <div id="timer-container">Time Remaining: <span id="countdown"></span></div>
+                <div id="timer-container">Time Remaining: <span id="countdown"></span></div>
+            </div>
         </header>
 
         <div id="container">
@@ -26,25 +28,35 @@
             </div>
 
             <!-- Game content. Hidden until start of game -->
-            <div id="game-card" style="display:none">
+            <div id="game-card" style="display: none">
                 <div id="question"></div>
 
                 <div id="choices">
 
-                    <div class="choice" id="a"></div>
+                    <button class="choice" id="a"></button>
 
-                    <div class="choice" id="b"></div>
+                    <button class="choice" id="b"></button>
 
-                    <div class="choice" id="c"></div>
+                    <button class="choice" id="c"></button>
 
-                    <div class="choice" id="d"></div>
+                    <button class="choice" id="d"></button>
 
                 </div>
-                <button id="submitBtn">Submit Answer</button>
-
-                <div id="end-game"></div>
-
             </div>
+
+            <!-- End of game screen. Hidden until gameOver function runs -->
+            <div id="end-game" style="display: none">
+                <div id="score-display">Your score is: <span id="score"></span></div>
+                <div id="input-group">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" placeholder="name here" value="">
+                    <p>
+                        <button id="save-score">Save Score</button>
+                        <button id="display-scores">Display Scores</button>
+                    </p>
+                </div>
+            </div>
+
         </div>
         <script src="assets/jss/script.js"></script>
     </body>
